--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -19,6 +19,7 @@
       <div class="text-center">
         <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
       </div>
+      <h3>This is just a tutorial</h3>
     </div>
   </div>
 </div>
