feat(*): Added new paragraph.

--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -20,6 +20,10 @@
         <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
       </div>
       <h3>This is just a tutorial</h3>
+      <div>
+        <div class="text-center"></div>
+        <p>This is just a tutorial paragraph.</p>
+      </div>
     </div>
   </div>
 </div>
